--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@react-three/drei": "1.5.8",
-    "@react-three/postprocessing": "1.4.0",
-    "nice-color-palettes": "3.0.0",
-    "postprocessing": "6.17.3",
+    "@pmndrs/branding": "0.0.1",
+    "@react-three/drei": "2.1.1",
     "react": "17.0.0-rc.2",
     "react-dom": "17.0.0-rc.2",
     "react-scripts": "3.0.1",
     "react-three-fiber": "5.0.2",
+    "styled-components": "^5.2.0",
     "three": "0.121.1"
   },
   "devDependencies": {
